barre di navigazione statiche mancano il mondo e la freccia

--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
     <title>Hubspot</title>
 </head>
 <body>
-    
+   <div class="container bg-lightgrey">
+       <div class="wrapper">
+           <header>
+               <nav class="clearfix h-top">
+                    <div class="mini-box">
+                       <p class="english">English</p>                   
+                    </div>
+                    <div class="mini-box">
+                        <p>Contact Us</p> 
+                    </div>
+                    <div class="btn_box">
+                        <p class="lens">&#128269;</p>
+                        <button class="btn-small">Log in</button>
+                        <button class="btn-orange">GetHubspotFree</button>
+                    </div>
+               </nav>
+           </header>
+       </div>
+   </div>
+   <div class="container bordo-colorato">
+    <div class="wrapper">
+        <header>
+            <nav class="clearfix h-bottom">
+               <img src="img/logo.svg" alt="logo Hubspot" class="logo">
+               <div class="list">
+                   <ul>
+                       <li>Software</li>
+                       <li>Pricing</li>
+                       <li>Resources</li>
+                       <li>Partners</li>
+                       <li>About</li>
+                   </ul>
+               </div> 
+            </nav>
+        </header>
+    </div>
+</div>  
 </body>
 </html>
