fatta parte del jumbotron

--- a/index.html
+++ b/index.html
@@ -28,22 +28,38 @@
        </div>
    </div>
    <div class="container bordo-colorato">
-    <div class="wrapper">
-        <header>
-            <nav class="clearfix h-bottom">
-               <img src="img/logo.svg" alt="logo Hubspot" class="logo">
-               <div class="list">
-                   <ul>
-                       <li>Software</li>
-                       <li>Pricing</li>
-                       <li>Resources</li>
-                       <li>Partners</li>
-                       <li>About</li>
-                   </ul>
-               </div> 
-            </nav>
-        </header>
+        <div class="wrapper">
+            <header>
+                <nav class="clearfix h-bottom">
+                    <img src="img/logo.svg" alt="logo Hubspot" class="logo">
+                    <div class="list">
+                        <ul>
+                            <li>Software</li>
+                            <li>Pricing</li>
+                            <li>Resources</li>
+                            <li>Partners</li>
+                            <li>About</li>
+                        </ul>
+                    </div> 
+                </nav>
+            </header>
+        </div>
+    </div> 
+    <div class="container jumbotron">
+        <div class="wrapper">
+            <div class="box">
+                <h1>
+                    There's a better way to grow.
+                </h1>
+                <p>
+                    Marketing, sales, and service software that helps your  business grow without compromise. Because "good for the  business" should also mean "good for the customer"
+                </p>
+                <button class="btn-orange big">GetHubspotFree</button>
+                <p>
+                    Get started with FREE tools, and upgrade as you grow.
+                </p>
+            </div>
+        </div>
     </div>
-</div>  
 </body>
 </html>
