fatta bozza seconda sezione del main

--- a/index.html
+++ b/index.html
@@ -61,5 +61,52 @@
             </div>
         </div>
     </div>
+    <div class="container bg-main">
+        <main>
+            <div class="wrapper">
+                <div class="box-cube">    
+                    <img src="img/Integrations_Illustration@2x.webp" alt="cubo colorato" class="cube">
+                </div>
+                <div class="box-content">
+                    <h2>
+                        Powerful Alone. Better Together
+                    </h2>
+                    <p>
+                        HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.  
+                    </p>
+                </div>
+                <div class="horizontal-card">
+                    <div class="row clearfix">
+                        <div class="box-img-btn">
+                            <div class="box-img">
+                                <img src="img/CRM-Illustration.svg" alt="libro">
+                                <button class="btn-orange medium">Learn More</button>
+                            </div>
+                        </div>
+                        <div class="side-box">
+                            <h3>
+                                Free HubSpot CRM
+                            </h3>
+                            <p>
+                                Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.
+                            </p>
+                            <span>
+                                <strong>POPOLAR FEATURE</strong>
+                            </span>
+                            <div class="rule"><hr></div>
+                            <div class="marked-list">
+                                <span>&check;</span>
+                                <span>Contact Insight</span>
+                                <span>&check;</span>
+                                <span>Deals</span>
+                                <span>&check;</span>
+                                <span>Task</span>
+                            </div>    
+                        </div>
+                    </div>
+                </div>        
+            </div>
+        </main>
+    </div>
 </body>
 </html>
