bozza colonne sezione main

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </p>
                 </div>
                 <div class="horizontal-card">
-                    <div class="row clearfix">
+                    <div class="top-row clearfix">
                         <div class="box-img-btn">
                             <div class="box-img">
                                 <img src="img/CRM-Illustration.svg" alt="libro">
@@ -104,6 +104,78 @@
                             </div>    
                         </div>
                     </div>
+                </div>
+                <div class="vertical-card clearfix">
+                    <div class="column">
+                        <div class="cln-content">
+                            <div class="cln-img">
+                                <img src="img/Marketing-Hub-Free.svg"
+                                alt="marketing hub">
+                            </div>    
+                            <h3>
+                                Marketing Hub
+                            </h3>
+                            <p>
+                                Marketing software to help you to growtraffic, convert more visitors, and runcomplete inbound marketing campaigns atscale.  
+                            </p>
+                            <div class="rule"><hr></div>
+                            <p>POPOLAR FEATURE</p>
+                            <ul>
+                                <li>Lead Generation</li>
+                                <li>Marketing Automation</li>
+                                <li>Analytics</li>
+                            </ul>
+                            <button class="btn-orange medium">Learn More</button>
+                        </div>
+                    </div>
+                    <div class="column middle">
+                        <div class="cln-content">
+                            <div class="cln-img">
+                                <img src="img/Marketing-Hub-Free.svg"
+                                alt="marketing hub">
+                            </div>    
+                            <h3>
+                                Marketing Hub
+                            </h3>
+                            <p>
+                                Marketing software to help you to growtraffic, 
+                                convert more visitors, and runcomplete inbound 
+                                marketing campaigns atscale.  
+                            </p>
+                            <div class="rule"><hr></div>
+                            <p>POPOLAR FEATURE</p>
+                            <ul>
+                                <li>Lead Generation</li>
+                                <li>Marketing Automation</li>
+                                <li>Analytics</li>
+                            </ul>
+                            <button class="btn-orange medium">Learn More</button>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="cln-content">
+                            <div class="cln-img">
+                                <img src="img/Marketing-Hub-Free.svg"
+                                alt="marketing hub">
+                            </div>    
+                            <h3>
+                                Marketing Hub
+                            </h3>
+                            <p>
+                                Marketing software to help you to growtraffic, 
+                                convert more visitors, and runcomplete inbound 
+                                marketing campaigns atscale.  
+                            </p>
+                            <div class="rule"><hr></div>
+                            <p>POPOLAR FEATURE</p>
+                            <ul>
+                                <li><span class="mark">&check;</span>Lead Generation</li>
+                                <li><span class="mark">&check;</span>Marketing Automation</li>
+                                <li><span class="mark">&check;</span>Analytics</li>
+                            </ul>
+                            <button class="btn-orange medium">Learn More</button>
+                        </div>
+                    </div>    
                 </div>        
             </div>
         </main>
