bozza sezione con sfondo azzurro

--- a/index.html
+++ b/index.html
@@ -180,5 +180,37 @@
             </div>
         </main>
     </div>
+    <div class="container bg-blue">
+        <div class="wrapper">
+            <section class="records">
+                <div class="text-part">
+                <h2>
+                    Learn and grow with award-winning support and thriving community behind you.
+                </h2>
+                <p>
+                    You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales  pros just like you.
+                </p> 
+                </div>
+                <div class="lgtblue-row clearfix">
+                    <div class="square">
+                        <div class="sq-cnt">
+                            <img src="img/homepage_community_agency.svg" alt="stretta di mano">
+                            <h2>150 +</h2>
+                            <p>HubSpot user groups</p>
+                        </div>    
+                    </div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                </div>
+                <div class="lgtblue-row bottom clearfix">
+                    <div class="square"></div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                </div>
+            </section>    
+        </div>
+    </div>
 </body>
 </html>
