--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
         <div class="wrapper">
             <section class="records">
                 <div class="text-part">
-                <h2>
-                    Learn and grow with award-winning support and thriving community behind you.
-                </h2>
-                <p>
-                    You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales  pros just like you.
-                </p> 
+                    <h2>
+                        Learn and grow with award-winning support and thriving community behind you.
+                    </h2>
+                    <p>
+                        You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales  pros just like you.
+                    </p> 
                 </div>
                 <div class="lgtblue-row clearfix">
                     <div class="square">
@@ -199,17 +199,118 @@
                             <p>HubSpot user groups</p>
                         </div>    
                     </div>
-                    <div class="square"></div>
-                    <div class="square"></div>
-                    <div class="square"></div>
-                </div>
+                    <div class="square">
+                        <div class="sq-cnt">
+                            <img src="img/homepage_community_blog.svg" alt="logo hubspot blogs">
+                            <h2>4.5M+</h2>
+                            <p>monthly visits</p>
+                        </div>
+                    </div>    
+                    <div class="square">
+                        <div class="sq-cnt">
+                            <img src="img/homepage_community_academy.svg" alt="logo hubspot academy">
+                            <h2>155K+</h2>
+                            <p>certified professionals</p>
+                        </div>
+                    </div>    
+                    <div class="square last">
+                        <div class="sq-cnt">
+                            <img src="img/homepage_community_inbound.svg" alt="logo inbound">
+                            <h2>21K+</h2>
+                            <p>registered attendees</p>
+                        </div>    
+                    </div>
+                </div>    
                 <div class="lgtblue-row bottom clearfix">
-                    <div class="square"></div>
-                    <div class="square"></div>
-                    <div class="square"></div>
-                    <div class="square"></div>
-                </div>
+                    <div class="square">
+                        <div class="sq-cnt">
+                            <img src="img/homepage_community_connect.svg" alt="logo hubspot connect">
+                            <h2>200+</h2>
+                            <p>integrations</p>
+                        </div>
+                    </div>    
+                    <div class="square">
+                        <div class="sq-cnt">
+                            <img src="img/homepage_community_globe.svg" alt="globo stilizzato">
+                            <h2>6 +</h2>
+                            <p>languages</p>
+                        </div>
+                    </div>    
+                    <div class="square">
+                        <div class="sq-cnt">
+                            <img src="img/homepage_community_followers.svg" alt="logo followers">
+                            <h2>2.6M+</h2>
+                            <p>social followers</p>
+                        </div>
+                    </div>    
+                    <div class="square last">
+                        <div class="sq-cnt">
+                            <img src="img/growthhub-white-small-1.svg" alt="logo growth hub">
+                            <h2>5K+</h2>
+                            <p>profiles and counting</p>
+                        </div>
+                    </div>
+                </div>    
             </section>    
+        </div>
+    </div>
+    <div class="container">
+        <div class="wrapper">
+            <section class="partners">
+                <div class="pt-row clearfix">
+                    <div class="numbers">
+                        <div class="n-cnt">
+                            <h2>64,500</h2>
+                            <p>
+                                customers in over <strong>100</strong> countries growing their businesses with HubSpot
+                            </p>
+                        </div>    
+                    </div>
+                    <div class="logos clearfix">
+                        <div class="lg">
+                            <img src="img/Atlassian-horizontal-blue@2x.webp" alt="">
+                        </div>
+                        <div class="lg">
+                            <img src="img/doordash_owler_20181011_194113_original@2x.webp" alt="">
+                        </div>
+                        <div class="lg">                        
+                            <img src="img/g2crowd-logo@2x.webp" alt="">
+                        </div>
+                        <div class="lg">
+                            <img src="img/purple-logo@2x.png" alt="">
+                        </div>
+                        <div class="lg">
+                            <img src="img/Subaru_Logo_v2_186x63@2x.webp" alt="">
+                        </div>
+                        <div class="lg">
+                            <img src="img/Wistia_logo@2x.webp" alt="">
+                        </div>
+                        <div class="lg">
+                            <img src="img/Classpass-logo@2x.webp" alt="">
+                        </div>
+                        <div class="lg">
+                            <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="photo-row clearfix">
+                    <div class="box left">
+                        <h2>
+                            Start Growing With HubSpot Today
+                        </h2>
+                        <p>
+                            With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.
+                        </p>
+                        <button class="btn-orange big">GetHubspotFree</button>
+                        <p>
+                            Get started with FREE tools, or get more with our premium software.
+                        </p>
+                    </div>
+                    <div class="photo-spot">
+                        <img src="img/woman.webp" alt="immagine ragazza spot">
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 </body>
