bozza progetto completata da rivedere il testo e inserire particolari

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Hubspot</title>
 </head>
@@ -312,6 +313,88 @@
                 </div>
             </section>
         </div>
+    </div>
+    <div class="container bg-deepblue">
+        <footer>
+            <div class="wrapper">
+                <div class="ft-row clearfix">
+                    <div class="links-list">
+                        <h4>Increase Your Traffic</h4>
+                        <ul>
+                            <li><a href="#">Ad Software</a></li>
+                            <li><a href="#">Blog Software</a></li>
+                            <li><a href="#">SEO Software</a></li>
+                            <li><a href="#">Social Media Software</a></li>
+                            <li><a href="#">Content Management System</a></li>
+                        </ul>
+                    </div>
+                    <div class="links-list">
+                        <h4>Connect With Leads</h4>
+                        <ul>
+                            <li><a href="#">Find New Prospects</a></li>
+                            <li><a href="#">Email Tracking</a></li>
+                            <li><a href="#">Sales Email Templates</a></li>
+                            <li><a href="#">Click To Call Your Leads</a></li>
+                            <li><a href="#">Email Marketing</a></li>
+                        </ul>
+                    </div>
+                    <div class="links-list">
+                        <h4>Close and Manage Leads</h4>
+                        <ul>
+                            <li><a href="#">Document Tracking Tool</a></li>
+                            <li><a href="#">Meeting Schedule Tool</a></li>
+                            <li><a href="#">Sales Automation Tool</a></li>
+                            <li><a href="#">Lead Management Tool</a></li>
+                            <li><a href="#">Pipeline Management Tool</a></li>
+                        </ul>
+                    </div>
+                    <div class="links-list">
+                        <h4>Support and Tools</h4>
+                        <ul>
+                            <li><a href="#">HubSpot Partners</a></li>
+                            <li><a href="#">Join a Local User Group</a></li>
+                            <li><a href="#">Get a Free Website Report</a></li>
+                            <li><a href="#">HubSpot Templates</a></li>
+                            <li><a href="#">Free Tools & Generators</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="ft-row clearfix">
+                    <div class="btn-lg">
+                        <button class="grey">Contact HubSpot Support</button>
+                        <div class="social">
+                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="#" class="fa fa-instagram"></a>
+                            <a href="#" class="fa fa-youtube"></a>
+                            <a href="#" class="fa fa-twitter"></a>
+                            <a href="#" class="fa fa-linkedin"></a>
+                        </div>    
+                    </div>
+                </div>
+                <div class="ft-row third">
+                    <div class="languages">
+                        <a href="#">English</a>
+                        <a href="#">Deutsch</a>
+                        <a href="#">&#21488;&#21271;</a>
+                        <a href="#">Espa&ntilde;ol</a>
+                        <a href="#">Portugu&#234;s</a>
+                        <a href="#">Fran&ccedil;ais</a>
+                    </div>
+                </div>
+                <div class="ft-row clearfix">
+                    <div class="copyright-left">
+                        <img src="img/HSLogo_gray.svg" alt="logo HubSpot grigio" class="grey-logo">
+                        <p>
+                            Copyright &copy; 2019 HubSpot, Inc. 
+                        </p>
+                    </div>
+                    <div class="copyright-right">
+                        <a href="#">Legal Stuff</a>
+                        <a href="#">Privacy Policy</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
