fatte modifiche alla prima nav bar

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
            <header>
                <nav class="clearfix h-top">
                     <div class="mini-box">
-                       <p class="english">English</p>                   
+                        <img src="img/earth.png" alt="terra" class="icon">
+                        <span class="lingua">English &#709;</span>
                     </div>
                     <div class="mini-box">
                         <p>Contact Us</p> 
-                    </div>
+                    </div>    
                     <div class="btn_box">
                         <p class="lens">&#128269;</p>
                         <button class="btn-small">Log in</button>
@@ -35,11 +36,11 @@
                     <img src="img/logo.svg" alt="logo Hubspot" class="logo">
                     <div class="list">
                         <ul>
-                            <li>Software</li>
+                            <li>Software &#709;</li>
                             <li>Pricing</li>
-                            <li>Resources</li>
-                            <li>Partners</li>
-                            <li>About</li>
+                            <li>Resources &#709;</li>
+                            <li>Partners &#709;</li>
+                            <li>About &#709;</li>
                         </ul>
                     </div> 
                 </nav>
@@ -84,7 +85,7 @@
                                 <button class="btn-orange medium">Learn More</button>
                             </div>
                         </div>
-                        <div class="side-box">
+                        <div class="side-zone">
                             <h3>
                                 Free HubSpot CRM
                             </h3>
