sistemata sezione jumbotron, - bordo azzurro

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div class="container bg-main">
+    <div class="container bg-lightgrey">
         <main>
             <div class="wrapper">
                 <div class="box-cube">    
