--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     There's a better way to grow.
                 </h1>
                 <p>
-                    Marketing, sales, and service software that helps your  business grow without compromise. Because "good for the  business" should also mean "good for the customer"
+                    Marketing, sales, and service software that helps your business grow without compromise. Because "good for the  business" should also mean "good for the customer"
                 </p>
                 <button class="btn-orange big">GetHubspotFree</button>
                 <p>
@@ -63,6 +63,7 @@
             </div>
         </div>
     </div>
+    <div class="container banda-azzurra"></div>
     <div class="container bg-lightgrey">
         <main>
             <div class="wrapper">
