modificati check-mark arancioni

--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                             </span>
                             <div class="rule"><hr></div>
                             <div class="marked-list">
-                                <span>&check;</span>
-                                <span>Contact Insight</span>
-                                <span>&check;</span>
-                                <span>Deals</span>
-                                <span>&check;</span>
-                                <span>Task</span>
+                                <span class="check">&check;</span>
+                                <span class="word">Contact Insight</span>
+                                <span class="check">&check;</span>
+                                <span class="word">Deals</span>
+                                <span class="check">&check;</span>
+                                <span class="word">Task</span>
                             </div>    
                         </div>
                     </div>
