ultime modifiche terminate. Progetto Completato

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <div class="wrapper">
             <div class="box">
                 <h1>
-                    There's a better way to grow.
+                    There&#39;s a better way to grow.
                 </h1>
                 <p>
-                    Marketing, sales, and service software that helps your business grow without compromise. Because "good for the  business" should also mean "good for the customer"
+                    Marketing, sales, and service software that helps your business grow without compromise. Because &#147;good for the  business&#148; should also mean &#147;good for the customer&#148;
                 </p>
                 <button class="btn-orange big">GetHubspotFree</button>
                 <p>
@@ -75,7 +75,7 @@
                         Powerful Alone. Better Together
                     </h2>
                     <p>
-                        HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.  
+                        HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They&#39;re powerful alone &#8213; but even better when used together.  
                     </p>
                 </div>
                 <div class="horizontal-card">
@@ -91,7 +91,7 @@
                                 Free HubSpot CRM
                             </h3>
                             <p>
-                                Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.
+                                Everything you need to organize, track, and build better relationships with leads and customers. Yes, it&#39;s 100&#37; free. Forever.
                             </p>
                             <span>
                                 <strong>POPOLAR FEATURE</strong>
@@ -113,7 +113,7 @@
                         <div class="cln-content">
                             <div class="cln-img">
                                 <img src="img/Marketing-Hub-Free.svg"
-                                alt="marketing hub">
+                                alt="marketing hub" class="main-img">
                             </div>    
                             <h3>
                                 Marketing Hub
@@ -122,11 +122,11 @@
                                 Marketing software to help you to growtraffic, convert more visitors, and runcomplete inbound marketing campaigns atscale.  
                             </p>
                             <div class="rule"><hr></div>
-                            <p>POPOLAR FEATURE</p>
+                            <p><strong>POPOLAR FEATURE</strong></p>
                             <ul>
-                                <li>Lead Generation</li>
-                                <li>Marketing Automation</li>
-                                <li>Analytics</li>
+                                <li><span class="mark">&check;</span>Lead Generation</li>
+                                <li><span class="mark">&check;</span>Marketing Automation</li>
+                                <li><span class="mark">&check;</span>Analytics</li>
                             </ul>
                             <button class="btn-orange medium">Learn More</button>
                         </div>
@@ -134,23 +134,21 @@
                     <div class="column middle">
                         <div class="cln-content">
                             <div class="cln-img">
-                                <img src="img/Marketing-Hub-Free.svg"
-                                alt="marketing hub">
+                                <img src="img/Sales-Professional-Illustration.svg"
+                                alt="sales hub illustration" class="main-img">
                             </div>    
                             <h3>
-                                Marketing Hub
+                                Sales Hub
                             </h3>
                             <p>
-                                Marketing software to help you to growtraffic, 
-                                convert more visitors, and runcomplete inbound 
-                                marketing campaigns atscale.  
+                                Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.
                             </p>
                             <div class="rule"><hr></div>
-                            <p>POPOLAR FEATURE</p>
+                            <p><strong>POPOLAR FEATURE</strong></p>
                             <ul>
-                                <li>Lead Generation</li>
-                                <li>Marketing Automation</li>
-                                <li>Analytics</li>
+                                <li><span class="mark">&check;</span>Email Tracking</li>
+                                <li><span class="mark">&check;</span>Meeting Scheduling</li>
+                                <li><span class="mark">&check;</span>Email Automation</li>
                             </ul>
                             <button class="btn-orange medium">Learn More</button>
                         </div>
@@ -158,23 +156,21 @@
                     <div class="column">
                         <div class="cln-content">
                             <div class="cln-img">
-                                <img src="img/Marketing-Hub-Free.svg"
-                                alt="marketing hub">
+                                <img src="img/Service-Hub-Illustration.svg"
+                                alt="service hub illustration" class="main-img">
                             </div>    
                             <h3>
-                                Marketing Hub
+                                Service Hub
                             </h3>
                             <p>
-                                Marketing software to help you to growtraffic, 
-                                convert more visitors, and runcomplete inbound 
-                                marketing campaigns atscale.  
+                                Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business. 
                             </p>
                             <div class="rule"><hr></div>
-                            <p>POPOLAR FEATURE</p>
+                            <p><strong>POPOLAR FEATURE</strong></p>
                             <ul>
-                                <li><span class="mark">&check;</span>Lead Generation</li>
-                                <li><span class="mark">&check;</span>Marketing Automation</li>
-                                <li><span class="mark">&check;</span>Analytics</li>
+                                <li><span class="mark">&check;</span>Tickets</li>
+                                <li><span class="mark">&check;</span>Customer Feedback</li>
+                                <li><span class="mark">&check;</span>Knowledge Base</li>
                             </ul>
                             <button class="btn-orange medium">Learn More</button>
                         </div>
@@ -191,7 +187,7 @@
                         Learn and grow with award-winning support and thriving community behind you.
                     </h2>
                     <p>
-                        You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales  pros just like you.
+                        You don&#39;t have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot&#39;s legendary customer support team and a community of thousands of marketing and sales pros just like you.
                     </p> 
                 </div>
                 <div class="lgtblue-row clearfix">
@@ -271,28 +267,28 @@
                     </div>
                     <div class="logos clearfix">
                         <div class="lg">
-                            <img src="img/Atlassian-horizontal-blue@2x.webp" alt="">
+                            <img src="img/Atlassian-horizontal-blue@2x.webp" alt="logo atlassian">
                         </div>
                         <div class="lg">
-                            <img src="img/doordash_owler_20181011_194113_original@2x.webp" alt="">
+                            <img src="img/doordash_owler_20181011_194113_original@2x.webp" alt="logo doordash">
                         </div>
                         <div class="lg">                        
-                            <img src="img/g2crowd-logo@2x.webp" alt="">
+                            <img src="img/g2crowd-logo@2x.webp" alt="logo g2crowd">
                         </div>
                         <div class="lg">
-                            <img src="img/purple-logo@2x.png" alt="">
+                            <img src="img/purple-logo@2x.png" alt="logo purple">
                         </div>
                         <div class="lg">
-                            <img src="img/Subaru_Logo_v2_186x63@2x.webp" alt="">
+                            <img src="img/Subaru_Logo_v2_186x63@2x.webp" alt="logo subaru">
                         </div>
                         <div class="lg">
-                            <img src="img/Wistia_logo@2x.webp" alt="">
+                            <img src="img/Wistia_logo@2x.webp" alt="logo wistia">
                         </div>
                         <div class="lg">
-                            <img src="img/Classpass-logo@2x.webp" alt="">
+                            <img src="img/Classpass-logo@2x.webp" alt="logo classpass">
                         </div>
                         <div class="lg">
-                            <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="">
+                            <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="logo vmware">
                         </div>
                     </div>
                 </div>
@@ -357,7 +353,7 @@
                             <li><a href="#">Join a Local User Group</a></li>
                             <li><a href="#">Get a Free Website Report</a></li>
                             <li><a href="#">HubSpot Templates</a></li>
-                            <li><a href="#">Free Tools & Generators</a></li>
+                            <li><a href="#">Free Tools &#38; Generators</a></li>
                         </ul>
                     </div>
                 </div>
