Fatte ultime modifiche header. Progetto Ultimato.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     There&#39;s a better way to grow.
                 </h1>
                 <p>
-                    Marketing, sales, and service software that helps your business grow without compromise. Because &#147;good for the  business&#148; should also mean &#147;good for the customer&#148;
+                    Marketing, sales, and service software that helps your business grow without compromise. Because &quot;good for the  business&quot; should also mean &quot;good for the customer&quot;
                 </p>
                 <button class="btn-orange big">GetHubspotFree</button>
                 <p>
